fix bug on initial load - expanding playtime list not showing correctly

--- a/src/app/user-form/user-form.component.css
+++ b/src/app/user-form/user-form.component.css
@@ -2,7 +2,7 @@
   color: white;
 }
 .btn-info{
-  margin-top: 10%;
+  margin-top: 10px;
   font-size: .8em;
 }
 .justify-content-center{
@@ -18,6 +18,10 @@ left: 47%;
   top: 30%;
   left: 15%;
 
+}
+.example-bnetId{
+  font-size: .6em;
+  opacity: .7;
 }
 #user-form{
   background-color: #25272b;
